--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -76,9 +76,13 @@ p{
     background-color: #24433e!important;
     padding-top: 20px;
     padding-bottom: 20px;
-    position:fixed;
+    /*position:fixed;*/
     bottom:0;
     min-width: 100%;
+}
+
+#GAP{
+    min-height: 30vh;
 }
 
 #my-footer-text{
