--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -3,9 +3,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
-    /*color: #2c3e50;*/
     color: #ebebeb;
-
 }
 
 #type {
@@ -76,7 +74,6 @@ p{
     background-color: #24433e!important;
     padding-top: 20px;
     padding-bottom: 20px;
-    /*position:fixed;*/
     bottom:0;
     min-width: 100%;
 }
@@ -92,4 +89,5 @@ p{
 
 .container {
     padding-bottom: 20px;
+    padding-top: 20px;
 }
