--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -20,7 +20,13 @@
 .tile-img {
     width: 100px;
     height: 155px;
-    padding: 0;
+    padding-bottom: 10px;
+}
+
+.book-cover {
+    width: 200px;
+    height: 300px;
+    padding-bottom: 10px;
 }
 
 .author-img {
